cmake_minimum_required(VERSION 3.12)
project(OS_6thLab C)

set(CMAKE_C_STANDARD 99)

add_executable(OS_6thLab main.c)
add_executable(CodePt-1 src/6thcodePt1.c)
add_executable(CodePt-2 src/6thcodePt2.c)
add_executable(CodePt-3 src/6thcodePt3.c)
add_executable(CodePt-4 src/6thcodePt4.c)
add_executable(CodePt-5 src/6thcodePt5.c)
add_executable(6thTest src/test/testFor6th.c)


